# tarnish

./: .dockerignore  .env  .env.github-actions  .test-env  Cargo.toml  Dockerfile  README.md  docker-compose.yml  feature_roadmap.txt  logfile  notes.txt  postgresql-docker.nix  result  shell.nix
github/workflows/: main.yml
migrations/2024-07-25-134437_create_posts/: down.sql  up.sql
old_docker_files/: Dockerfile
pgsql_data/: postgresql.conf  postmaster.opts  postmaster.pid
pgsql_data/base/1/: 1247  1249  1249_vm  1255_vm  1259  13665_vm  13670  2605_vm  2607_vm  2609_vm  2610_vm  2619  2619_fsm  2619_vm  2658  2659  2674  2682  2690  2691  2696  2704  2753_vm  2838  2838_vm  2840  2840_vm  2841  3081  3394  3394_vm  3456  3602  3603  3603_vm  3764  3764_vm  pg_internal.init
pgsql_data/base/4/: 1247_vm  1259  1259_vm  13655  13655_vm  13660_vm  13665  13670_vm  2600_vm  2601_vm  2606  2606_vm  2608  2609  2612_vm  2615  2615_vm  2617_vm  2619  2619_vm  2662  2663  2679  2681  (+9 more)
pgsql_data/global/: 1213_vm  1260  1260_vm  1261  1261_vm  1262  1262_vm  2396  2396_vm  2397  2671  2672  2676  pg_control  pg_internal.init
src/: blog_controller.rs  crud.rs  lib.rs  main.rs  models.rs  schema.rs  worklog_controller.rs
src/auth/: auth.rs
src/connectors/: postgres_connector.rs
src/controllers/: admin_controller.rs  auth_controller.rs  auth_handler.rs  blog_controller.rs  create_user_controller.rs  login_controller.rs  login_handler.rs  mod.rs  register_user_controller.rs  skills_controller.rs  user_controller.rs  validate_user_controller.rs  worklog_controller.rs
src/middleware/: jwt_token_service.rs  mod.rs  password_encryption.rs  rate_limiter.rs
src/models/: LoginRequest.rs  LogoutRequest.rs  LogoutResponse.rs  SessionData.rs  UserRoleResponse.rs  UserType.rs  blog_models.rs  mod.rs  skills_models.rs  user_type.rs  worklog_models.rs
src/schemas/: blog_schema.rs  mod.rs  skills_schema.rs  user_schema.rs  worklog_schema.rs
src/table_models/: blog_models.rs  mod.rs  skills_models.rs  users.rs  worklog_models.rs
tests/: blog_controller.rs  blog_controller_2.rs  blog_controller_spec.rs  crud_operations.rs  mod.rs  skills_controller_spec.rs  worklog_controller_spec.rs
tests/controllers/: blog_controller_spec.rs  mod.rs  skills_controller_spec.rs  worklog_controller_spec.rs
(+25 files in other folders)
