[package]
name = "tarnish"
version = "0.1.0"
edition = "2021"

#[dependencies]
#actix-web = "4.0"
#diesel = { version = "2.2", features = ["r2d2", "postgres"] }
#dotenv = "0.15"
#serde = { version = "1.0", features = ["derive"] }
#serde_json = "1.0"
#tokio = { version = "1.14.0", features = ["full"] }

[dependencies]
actix-web = "4.0"
actix-cors = "0.6"  # Add this line
diesel = { version = "2.0", features = ["postgres", "r2d2"] }
dotenv = "0.15"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
log = "0.4.22"

[dev-dependencies]
actix-rt = "2.0"

[lib]
name = "my_project"
path = "src/lib.rs"