[package]
name = "tarnish"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4.0"
actix-cors = "0.6"
diesel = { version = "2.0", features = ["postgres", "r2d2", "chrono"] }
dotenv = "0.15"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
log = "0.4.22"
lazy_static = "1.5.0"
chrono = { version = "0.4", features = ["serde"] }
bytes = "1.6.1"

[dev-dependencies]
actix-rt = "2.6"
actix-web = "4.0"
diesel = { version = "2.0", features = ["postgres", "r2d2", "chrono"] }
serde_json = "1.0"
dotenv = "0.15"
bytes = "1.6.1"

[lib]
path = "src/lib.rs"
