[package]
name = "tarnish"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4.0"
actix-cors = "0.6"
diesel = { version = "2.0", features = ["postgres", "r2d2", "chrono"] }
dotenv = "0.15"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
log = "0.4.22"
lazy_static = "1.5.0"
chrono = { version = "0.4", features = ["serde"] }
bytes = "1.6.1"
ctor = "0.2.8"
jsonwebtoken = "9.3.0"
bcrypt = "0.15.1"
thiserror = "1.0.63"  # Or the latest version
mockall = "0.13.0"

redis = { version = "0.26.1", features = ["tokio-comp"] }
tokio = { version = "1", features = ["full"] }
# redis deps
actix-session = "0.10.0"
config = "0.14.0"
uuid = { version = "1.10.0", features = ["v4"] }
env_logger = "0.11.5"




[dev-dependencies]
actix-rt = "2.6"
actix-web = "4.0"
diesel = { version = "2.0", features = ["postgres", "r2d2", "chrono"] }
serde_json = "1.0"
dotenv = "0.15"
bytes = "1.6.1"
ctor = "0.2.8"
mockall = "0.13.0"


[lib]
path = "src/lib.rs"
